--- a/css/standard/utility.css
+++ b/css/standard/utility.css
@@ -1,6 +1,7 @@
 /********************************************************/
 /*                  4. Utility classes                  */
 /********************************************************/
+@charset "utf-8";
 
 /*direction*/
 .ltr {
