--- a/css/standard/fonts.css
+++ b/css/standard/fonts.css
@@ -2,12 +2,12 @@
 @font-face {
     font-family: "SDF";
     font-weight: normal;
-    src: url("../../fonts/IRANSans-Light-web.woff") format("woff"), url("/Fonts/IRANSans-Light-web.ttf") format("truetype");
+    src: url("../../fonts/IRANSans-Light-web.woff") format("woff"), url("../../fonts/IRANSans-Light-web.ttf") format("truetype");
 }
 @font-face {
     font-family: "SDF";
     font-weight: bold;
-    src: url("../../fonts/IRANSans-Bold-web.woff") format("woff"), url("/Fonts/IRANSans-Bold-web.ttf") format("truetype");
+    src: url("../../fonts/IRANSans-Bold-web.woff") format("woff"), url("../../fonts/IRANSans-Bold-web.ttf") format("truetype");
 }
 
 @font-face {
@@ -18,11 +18,18 @@
 }
 
 @font-face {
+  font-family: "IRANSans";
+  font-style: normal;
+  font-weight: normal;
+  src: url("../../fonts/IRANSans.eot?iefix") format("eot"), url("../../fonts/IRANSans.woff") format("woff"), url("../../fonts/IRANSans.ttf") format("truetype");
+}
+
+@font-face {
     font-family: "yekan";
     font-style: normal;
     font-weight: normal;
     src: url("../../fonts/yekan.eot#iefix") format("embedded-opentype"),
-        url("../../fonts/yekan.woff") format("woff"), url("../fonts/yekan.ttf")
+        url("../../fonts/yekan.woff") format("woff"), url("../../fonts/yekan.ttf")
         format("truetype");
 }
 
